Update hyperion_platform to 0.5.0

--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
-        run: xmake test -vD
+        run: xmake test -v
 
       - name: Extract branch name
         shell: bash
@@ -103,7 +103,7 @@ jobs:
         env:
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
-        run: xmake test -vD
+        run: xmake test -v
 
       - name: Extract branch name
         shell: bash
@@ -162,7 +162,7 @@ jobs:
         env:
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
-        run: xmake test -vD
+        run: xmake test -v
 
       - name: Extract branch name
         shell: bash
@@ -217,7 +217,7 @@ jobs:
         env:
           ACTIONS_STEP_DEBUG: true
         working-directory: ${{github.workspace}}
-        run: xmake test -vD
+        run: xmake test -v
 
       - name: Extract branch name
         shell: bash
